--- a/frontend dev/html/Ep2/index.html
+++ b/frontend dev/html/Ep2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Frontend</title>
   </head>
   <body style="font-family: sans-serif;">
     <h1>Frontend Development</h1>
