--- a/frontend dev/html/Ep3 Inline and block/index.html
+++ b/frontend dev/html/Ep3 Inline and block/index.html
@@ -11,44 +11,13 @@
 
 <p>Frontend development is the development of the <a  target="_blank" href="https://en.wikipedia.org/wiki/Graphical_user_interface">graphical user interface</a> of a website, through the use of <a href="https://en.wikipedia.org/wiki/HTML">HTML</a>, <a href="https://en.wikipedia.org/wiki/CSS">CSS</a>, and <a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>, so that users can view and interact with that website.</p>
   
-<img src="asset/assets/images/html-css-javascript.png" alt="" width="50%">
-
-<ul>
-    <li><b>HTML:</b>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser</li>
-    <br>
-
-    <li><b>CSS:</b>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML</li>
-</ul>
-
-<img src="asset/assets/images/css.png" alt="" width="50%">
-
-<ol>
-    <b><li><p>Pure CSS</p></li>
-    <li><p>Bootstrap</p></li>
-    <li><p>Tailwind</p></li>
-    <li><p>Saas</p></li></b>
-</ol>
 
 
-<ul>
-    <li><b>JavaScript:</b> JavaScript often abbreviated JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. It is use to add functionality in the website.
-    </li>
-</ul>
-<img src="asset/assets/images/javascript.png" alt="" width="50%">
+<p>Hwllo</p><p>HI ji</p>
 
-<ol>
-    <li>Vanilla JS</li>
-    <li>jQuery (Library)</li>
-    <li>React (Framework)</li>
-    <li>Angular (Framework)</li>
-    <li>Vue (Framework)</li>
-    <li>Typescript (Preprocessor)</li>
+<p>Hello ji</p>
 
 
-
-</ol>
-
-<p style="text-align: center;" ">All copyrights &copy; reserved</p>
 
 
 
